gcc/testsuite/gdc.test/fail_compilation/fail57.d

int main()
{
    int x = 1 / 0;
    return 0;
}
